<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:paddingTop="30dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_distance"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_kilometers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_distance"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edit_distance"
        app:layout_constraintStart_toStartOf="@id/edit_distance"
        app:layout_constraintTop_toBottomOf="@id/edit_distance" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/edit_price"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_kilometers" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_price"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edit_distance"
        app:layout_constraintStart_toStartOf="@id/edit_distance"
        app:layout_constraintTop_toBottomOf="@id/edit_price" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/edit_autonomy"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_price" />

    <TextView
        android:id="@+id/text_autonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_autonomy"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/edit_distance"
        app:layout_constraintStart_toStartOf="@id/edit_distance"
        app:layout_constraintTop_toBottomOf="@id/edit_autonomy" />

    <TextView
        android:id="@+id/text_trip_coust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/text_calculate_coust"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/edit_distance"
        app:layout_constraintStart_toStartOf="@id/edit_distance"
        app:layout_constraintTop_toBottomOf="@id/text_autonomy" />

    <TextView
        android:id="@+id/text_coust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="R$ 0"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/edit_distance"
        app:layout_constraintStart_toStartOf="@id/edit_distance"
        app:layout_constraintTop_toBottomOf="@id/text_trip_coust" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="10dp"
        android:text="@string/button_calculate"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_coust" />


</androidx.constraintlayout.widget.ConstraintLayout>